--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>InDex    =  en-us</title>
   </head>
   <body>
